# perry

./: .gitignore  Dockerfile  README.md  build_docker.sh  cmake-config.sh  qemu-config.sh  rm_container.sh  run_docker.sh
cmake/: compile_bitcode_library.cmake  find_z3.cmake
include/klee/: klee.h
include/klee/Core/: Interpreter.h
include/klee/Expr/: Constraints.h
include/klee/Module/: Cell.h  KModule.h
include/klee/Perry/: Passes.h  PerryCustomHook.h  PerryDMAInfo.h  PerryEthInfo.h  PerryExpr.h  PerryExprManager.h  PerryLoop.h  PerryTimerInfo.h  PerryTrace.h  PerryUtils.h  PerryZ3Builder.h
include/klee/Taint/: Taint.h
lib/Core/: AddressSpace.cpp  CMakeLists.txt  Context.cpp  Context.h  ExecutionState.cpp  ExecutionState.h  Executor.cpp  Executor.h  Memory.cpp  Memory.h  MemoryManager.cpp  PerryKModule.cpp  PerryTrace.cpp  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  Taint.cpp
lib/Expr/: CMakeLists.txt  Constraints.cpp  PerryExpr.cpp  PerryExprManager.cpp
lib/Module/: CMakeLists.txt  CollectLoopExitingPass.cpp  ControlDependenceGraphPass.cpp  FuncSymbolizer.cpp  KModule.cpp  ModuleUtil.cpp  Passes.h  PerryAnalysis.cpp  RaiseArmAsm.cpp
lib/Solver/: CMakeLists.txt  PerryZ3Builder.cpp
runtime/Freestanding/: CMakeLists.txt
runtime/Intrinsic/: CMakeLists.txt
synthesizer/: requirements.txt  synthesize.py  synthesizer.py
synthesizer/example/NXP-FRDM-K22F/: config.yaml  nxp-frdm-k22f.yaml  periph-struct.yaml  succ-ret.yaml
tools/: CMakeLists.txt
tools/klee/: main.cpp
tools/perry/: CMakeLists.txt  main.cpp
(+133 files in other folders)
